# archie

./: Cargo.toml  README.md
archie-cli/src/: actions.rs  config.rs  lib.rs  main.rs  tar_archive.rs
archie-cli/src/brushes/: cargo.rs  go.rs  make.rs  npm.rs  pod.rs  swift.rs
archie-cli/src/compression/: mod.rs
archie-gui/: Cargo.toml
src/: actions.rs  archive.rs  config.rs  main.rs
src/brushes/: cargo.rs  gradle.rs  luarocks.rs  make.rs  meson.rs  mod.rs  ninja.rs  npm.rs  nuget.rs
src/compression/: lzma_compress.rs  mod.rs  xz_compress.rs
