[package]
name = "archie-cli"
version = "0.1.0"
edition = "2021"
description = "Archie is a simple CLI tool that allows you to archive infrequently used folders effortlessly and intelligently."
license = "MIT"
repository = "https://github.com/davnotdev"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
toml = "0.8.2"
anyhow = "1.0.75"
b64 = "0.4.0"
xz = "0.1.0"
tar = "0.4.40"
homedir = "0.2.1"
serde = { version = "1.0.189", features = ["derive"] }
